20_rot_matrix/grade.txt
Grading at Fri Sep 18 05:39:21 UTC 2020
Attempting to compile rotate.c
rotate.c: In function ‘rotate’:
rotate.c:8:7: error: unused variable ‘n’ [-Werror=unused-variable]
   int n = 10;
       ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
